--- a/DesafioAnotaAi/desafioAnotaAi/src/main/resources/application.properties
+++ b/DesafioAnotaAi/desafioAnotaAi/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+aws.accssKeyID = AKIA6GBMENJZZISQG7WC
+aws.secretKey = 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
+aws.region = us-east-1
+aws.sns.topic.catolog.arn = arn:aws:sns:us-east-2:975050140275:catolog-emit
