--- a/Consultas/src/main/resources/application.properties
+++ b/Consultas/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.password = 1234
 
 #3 url para a base de dados
 spring.datasource.url = jdbc:mysql://localhost:3305/vollmed_api?useTimezone=true&serverTimezone=UTC
+
+#não enviar a stackTrace na api
+server.error.include-stackTrace= never
