geração de token jwt

--- a/Consultas/src/main/resources/application.properties
+++ b/Consultas/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.datasource.url = jdbc:mysql://localhost:3305/vollmed_api?useTimezone=true
 
 #não enviar a stackTrace na api
 server.error.include-stackTrace= never
+
+#pega dados de uma variavel de ambiente
+api.security.token.secret =${JWT_SECRET:123456}
